FIXES -  spacing on plus character on mobile

--- a/styles/components/_carousel.scss
+++ b/styles/components/_carousel.scss
@@ -5,10 +5,6 @@
 		background: transparent url('') !important;
 }
 
-.carousel {
-	// display: none;
-}
-
 .slide-one {
 	text-align: center;
 	color: $white;
@@ -20,18 +16,17 @@
 	.plus {
 		font-size: 10rem;
 		font-weight: bold;
-		top: 50%;
-		left: 50%;
-		position: absolute;
-		transform: translate(-50%, -50%);
+		line-height: .7;
 		color: $offblack;
-		line-height: normal;
 	}
+
 }
 
 @media #{$tablet} {
 	.slide-one {
 		font-size: 8rem;
+
+
 	}
 	.slide-one .plus {
 		font-size: 13rem;
